third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/bad-escape-3.stderr
TOML parse error at line 1, column 16
  |
1 | backslash = "\"
  |                ^
invalid basic string
